# openapi-validator-tui

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  install.sh
.github/workflows/: release.yml
Formula/: lazyoav.rb
assets/: docker-compose.yaml
assets/generators/client/: csharp.yaml  go.yaml  java.yaml  kotlin.yaml  python.yaml  typescript-axios.yaml  typescript-fetch.yaml  typescript-node.yaml
assets/generators/server/: aspnetcore.yaml  go-server.yaml  kotlin-spring.yaml  python-fastapi.yaml  spring.yaml  typescript-nestjs.yaml
src/: custom.rs  generators.rs  lib.rs  main.rs  scaffold.rs
src/app/: browser.rs  diff.rs  mod.rs  state.rs  trace.rs
src/config/: loader.rs  mod.rs  types.rs
src/docker/: engine.rs  mod.rs  run.rs  types.rs
src/fix/: mod.rs  rules.rs
src/highlight/: convert.rs  mod.rs
src/keys/: action.rs  input.rs  keymap.rs  mod.rs
src/log_parser/: mod.rs  parse.rs
src/pipeline/: commands.rs  mod.rs  orchestrator.rs  types.rs
src/spec/: discovery.rs  mod.rs  parser.rs  types.rs
src/ui/: draw.rs  mod.rs  overlay.rs  style.rs
src/ui/panels/: code_browser.rs  detail.rs  diff_browser.rs  errors.rs  mod.rs  phases.rs  spec_context.rs
tests/: pipeline_docker.rs
tests/fixtures/: petstore.yaml
