[package]
name = "lazyoav"
version = "0.1.0"
edition = "2024"
description = "A TUI for exploring, linting, and fixing OpenAPI specs interactively"
license = "EUPL-1.2"
repository = "https://github.com/entur/openapi-validator-tui"
rust-version = "1.92.0"

[lib]
name = "lazyoav"
path = "src/lib.rs"

[[bin]]
name = "lazyoav"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
include_dir = "0.7"
shell-words = "1.1.1"
syntect = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
